--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Ads -->
   <!-- Replace the following script with your Google Ads script -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-xxxxxxxxxxxxxx",
-      enable_page_level_ads: true
-    });
-  </script>
 </head>
 <body>
   <div class="container">
@@ -75,12 +68,8 @@
 
   <!-- Google Ads Script -->
   <!-- Replace the following script with your Google Ads script -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7835811367585900"
+     crossorigin="anonymous"></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-xxxxxxxxxxxxxx",
-      enable_page_level_ads: true
-    });
-  </script>
 </body>
 </html>
